# sql-unit

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  CLI_GUIDE.md  Makefile  README.md  example.sql  pyproject.toml
.github/workflows/: pull-request.yaml
.openspec/: architecture_analysis.md  connectionconfig_examples.md  spec_review.md
david/: main.py
docs/examples/config/: 1-sqlite-single-database.md  2-postgresql-environment-variables.md  3-mysql-basic-connection.md  4-duckdb-analytical-testing.md
examples/sqlite/adult_users/: sql-unit.yaml
examples/sqlite/dynamic_average/: dynamic_average.basic_date_range.sql  dynamic_average.conditional_category_filter.sql  dynamic_average.empty_date_range.sql  dynamic_average.sql  sql-unit.yaml  (+8 more)
openspec/: config.yaml
sql_unit/: annotations.py  cli.py  model.py  types.py  utils.py
src/sql_unit/: __init__.py  config.py  config_validator.py  connection_dialect.py  database.py  exceptions.py  jinja_context.py  models.py  parser.py  renderer.py  runner.py  statement.py
tests/: conftest.py  test_config.py  test_config_cli_integration.py  test_config_integration.py  test_config_performance.py  test_config_validator.py  test_database.py  test_dataframe_conversion.py  test_expectations.py  test_inputs.py  test_integration.py  test_normalizer.py  test_parser.py  test_renderer.py  test_rows_equal_errors.py  test_rows_equal_expectation.py  test_statement.py
tests/cli/: test_config.py  test_discovery.py  test_executor.py  test_integration.py  test_output.py
tests/unit/: test_annotations.py  test_model.py  test_templating.py
(+97 files in other folders)
