[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-unit"
version = "0.1.0"
description = "SQL Unit Testing Framework - Phase 1 Core"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
    "ruamel.yaml>=0.17.0",
    "yaml-reference>=2.8.0",
    "sqlparse>=0.5.0",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.0",
]
dev = ["pytest>=9.0.2", "pytest-cov>=4.0.0"]

[tool.uv]
dev-dependencies = ["pytest>=9.0.2", "pytest-cov>=7.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/sql_unit"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
